--- a/College_DB_Django_Files/templates/main.html
+++ b/College_DB_Django_Files/templates/main.html
@@ -1,44 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <link rel="stylesheet" href="static\css\main.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RNSIT</title>
+	<title>Slide Navbar</title>
+	<link rel="stylesheet" type="text/css" href="static\css\main.css">
+<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="d-flex p-2" align="center"><h1><b>RN SHETTY INSTITUTE OF TECHNOLOGY</b></h1></div>
-  
-<div class="testbox">
-  <h1>NEW USER? REGISTER HERE</h1>
+	<div class="main">  	
+		<input type="checkbox" id="chk" aria-hidden="true">
 
-  <form action="/"> 
-  <fieldset>
-  <label id="icon" for="name"><i class="icon-user"></i></label>
-  <input type="text" name="name" id="name" placeholder="Name" required/>
-  <label id="icon" for="name"><i class="icon-shield"></i></label>
-  <input type="password" name="name" id="name" placeholder="Password" required/>
+			<div class="signup">
+				<form>
+					<label for="chk" aria-hidden="true">Sign up</label>
+					<input type="text" name="txt" placeholder="USN" required="">
+					<input type="email" name="email" placeholder="Email" required="">
+					<input type="password" name="pswd" placeholder="Password" required="">
+					<button>Sign up</button>
+				</form>
+			</div>
 
-   <p>By clicking Register, you agree on our <a href="#">terms and condition</a>.</p>
-   <a href="#" class="button">Register</a>
-  </fieldset>
-  </form>
-</div>
-
-<div class="testbox">
-  <h1>LOGIN HERE</h1>
-
-  <form action="/">
-
-  <label id="icon" for="name"><i class="icon-user"></i></label>
-  <input type="text" name="name" id="USN" placeholder="USN" required/>
-  <label id="icon" for="name"><i class="icon-shield"></i></label>
-  <input type="password" name="name" id="Password" placeholder="Password" required/>
-
-   <a href="#" class="button">LOGIN</a>
-  </form>
-</div>
-  
+			<div class="login">
+				<form>
+					<label for="chk" aria-hidden="true">Login</label>
+					<input type="text" name="txt" placeholder="USN" required="">
+					<input type="password" name="pswd" placeholder="Password" required="">
+					<button>Login</button>
+          <br>
+          <a id="lnkforget" class="hyperlink" href="#" style="float: right; margin-right: 150px;">Forgot Password?</a>
+				</form>
+			</div>
+	</div>
 </body>
 </html>
