--- a/College_DB_Django_Files/static/css/main.css
+++ b/College_DB_Django_Files/static/css/main.css
@@ -23,7 +23,7 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	background:#08015f
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -91,7 +91,7 @@ a{color:inherit;text-decoration:none}
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#1161ee;
+	background:#ff6501
 }
 .login-form .group label .icon{
 	width:15px;
@@ -125,7 +125,7 @@ a{color:inherit;text-decoration:none}
 	color:#fff;
 }
 .login-form .group .check:checked + label .icon{
-	background:#1161ee;
+	background:#ff6501;
 }
 .login-form .group .check:checked + label .icon:before{
 	transform:scale(1) rotate(45deg);
