--- a/DJANGO_FILES/templates/main.html
+++ b/DJANGO_FILES/templates/main.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,13 +40,14 @@
 					<div class="foot-lnk">
 						<a href="#forgot">Forgot Password?</a>
 					</div>
+				   </div>
 				
 					</form>
 				</div>
 				
 				<div class="sign-up-htm">
-						<form method="post" action="signup/" id = "form2">
-							{% csrf_token %}
+				    <form method="post" action="signup/" id = "form2">
+				    {% csrf_token %}
 					<div class="group">
 						<label for="user" class="label">USN</label>
 						<input id="user" type="text" class="input" name = "usn" required/>
@@ -69,8 +69,9 @@
 					</div>
 					<div class="hr"></div>
 					<div class="foot-lnk">
-						<label for="tab-1">Already Member?</a>
+						<label for="tab-1"><a>Already Member?</a></label>
 					</div>
+				    </form>
 				</div>
 			
 			</div>
@@ -81,6 +82,7 @@
 		{% endfor %}
 		{% endif %}
 			
+		    
 			</form>
 
 		</div>
