--- a/DJANGO_FILES/templates/main.html
+++ b/DJANGO_FILES/templates/main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,14 +41,13 @@
 					<div class="foot-lnk">
 						<a href="#forgot">Forgot Password?</a>
 					</div>
-				   </div>
 				
 					</form>
 				</div>
 				
 				<div class="sign-up-htm">
-				    <form method="post" action="signup/" id = "form2">
-				    {% csrf_token %}
+						<form method="post" action="signup/" id = "form2">
+							{% csrf_token %}
 					<div class="group">
 						<label for="user" class="label">USN</label>
 						<input id="user" type="text" class="input" name = "usn" required/>
@@ -69,9 +69,8 @@
 					</div>
 					<div class="hr"></div>
 					<div class="foot-lnk">
-						<label for="tab-1"><a>Already Member?</a></label>
+						<label for="tab-1">Already Member?</a>
 					</div>
-				    </form>
 				</div>
 			
 			</div>
@@ -82,7 +81,6 @@
 		{% endfor %}
 		{% endif %}
 			
-		    
 			</form>
 
 		</div>
