--- a/student_management_app/templates/hod_template/home_content.html
+++ b/student_management_app/templates/hod_template/home_content.html
@@ -1,3 +1,5 @@
+{% extends 'base_template.html' %}
+{% block main_content %}
 <!-- Main content -->
 <section class="content">
     <div class="container-fluid">
@@ -581,3 +583,5 @@
     </div><!-- /.container-fluid -->
   </section>
   <!-- /.content -->
+
+{% endblock main_content %}
