--- a/student_management_app/templates/login_page.html
+++ b/student_management_app/templates/login_page.html
@@ -46,10 +46,19 @@
         </div>
         <div class="row">
           <!-- /.col -->
-          <div class="col-4">
+          <div class="col-12">
             <button type="submit" class="btn btn-primary btn-block">Sign In</button>
           </div>
+          {% if messages %}
           <!-- /.col -->
+          <div class="col-12">
+            {% for message  in messages %}
+            {% if message.tags == 'error' %}
+            <div class="alert alert-danger" style="margin-top:8px">{{message}}</div>
+            {% endif%}
+            {% endfor %}
+          </div>
+          {% endif %}
         </div>
       </form>
 
