changes to add staff

--- a/student_management_app/templates/hod_template/add_staff_template.html
+++ b/student_management_app/templates/hod_template/add_staff_template.html
@@ -51,6 +51,7 @@ Add Staff
                 {% endif%}
                 {% if message.tags == 'success' %}
                 <div class="alert alert-success" style="margin-top:8px">{{message}}</div>
+                {% endif%}
                 {% endfor %}
               </div>
               {% endif %}
