--- a/student_management_app/templates/hod_template/add_course_template.html
+++ b/student_management_app/templates/hod_template/add_course_template.html
@@ -14,12 +14,12 @@ Add Course
           <h3 class="card-title">Add Course</h3>
         </div>
 
-        <form role="form" action="/add_course_save" method="post">
+        <form role="form" action="/courses_form_submission" method="post">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
               <label>Course Name</label>
-              <input type="text" class="form-control" name="course" placeholder="Enter course name">
+              <input type="text" class="form-control" name="course_name" placeholder="Enter course name">
             </div>
             <div class="form-group">
               {% if messages %}
