--- a/student_management_app/templates/hod_template/add_staff_template.html
+++ b/student_management_app/templates/hod_template/add_staff_template.html
@@ -14,7 +14,7 @@ Add Staff
           <h3 class="card-title">Add Staff</h3>
         </div>
 
-        <form role="form" action="" method="post">
+        <form role="form" action="/my_form" method="post">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
@@ -40,6 +40,10 @@ Add Staff
             <div class="form-group">
               <label>Address</label>
               <input type="text" class="form-control" placeholder="Address" name="address">
+            </div>
+            <div class="form-group">
+              <label>Admin ID</label>
+              <input type="text" class="form-control" placeholder="Admin ID" name="admin">
             </div>
             <div class="form-group">
               {% if messages %}
