--- a/student_management_app/templates/hod_template/add_course_template.html
+++ b/student_management_app/templates/hod_template/add_course_template.html
@@ -14,7 +14,7 @@ Add Course
           <h3 class="card-title">Add Course</h3>
         </div>
 
-        <form role="form" action="/courses_form_submission" method="post">
+        <form role="form" action="/add_course_form_api" method="post">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
