--- a/student_management_app/templates/student_template/sidebar_template.html
+++ b/student_management_app/templates/student_template/sidebar_template.html
@@ -2,9 +2,9 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="" class="brand-link">
-      <img src="{% static "dist/img/AdminLTELogo.png" %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+      <img src="https://th.bing.com/th?id=OIP.qgcG-DEtWBrp1keC2ok8hwAAAA&w=130&h=130&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" class="brand-image img-square elevation-3"
            style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+      <span class="brand-text font-weight-light">RNSIT</span>
     </a>
 
     <!-- Sidebar -->
