--- a/student_management_app/templates/staff_template/edit_student_result.html
+++ b/student_management_app/templates/staff_template/edit_student_result.html
@@ -9,7 +9,7 @@ Edit Results
                     <div class="row">
               <div class="col-md-12">
             <!-- general form elements -->
-             <form action="{% url 'edit_student_result' %}" method="post">
+             <form action="/edit_student_result" method="post">
                  {% csrf_token %}
             <div class="card card-primary">
               <div class="card-header">
