--- a/student_management_app/templates/staff_template/staff_apply_leave.html
+++ b/student_management_app/templates/staff_template/staff_apply_leave.html
@@ -25,7 +25,7 @@ Leave Report and Apply for Leave
                   </div>
                   <div class="form-group">
                     <label>Leave Reason</label>
-                    <textarea class="form-control" rows="6" name="leave_msg"></textarea>
+                    <textarea class="form-control" rows="6" name="leave_message"></textarea>
                   </div>
                    <div class="form-group">
                       {% if messages %}
