--- a/student_management_app/templates/hod_template/add_student_template.html
+++ b/student_management_app/templates/hod_template/add_student_template.html
@@ -51,6 +51,10 @@ Add Student
                 </select>
             </div>
             <div class="form-group">
+              <label>Section</label>
+              <input type="text" class="form-control" placeholder="Section" name="section">
+            </div>
+            <div class="form-group">
               <label>Gender</label>
               <select class="form-control" name="gender">
                   <option>M</option>
