--- a/student_management_app/templates/upload.html
+++ b/student_management_app/templates/upload.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Upload Test Scores</title>
+    <title>Upload Excel File</title>
 </head>
 <body>
-<h1>Upload Test Scores</h1>
-<form method="post" enctype="multipart/form-data">
+<h1>Upload Excel File</h1>
+<form action="{% url 'upload_file' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <label for="scores_file">Choose a file:</label>
-    <input type="file" name="scores_file" id="scores_file"><br>
-    <input type="submit" value="Upload">
+    <input type="file" name="file">
+    <button type="submit">Upload</button>
 </form>
 </body>
 </html>
