--- a/student_management_app/templates/main_login.html
+++ b/student_management_app/templates/main_login.html
@@ -10,8 +10,12 @@
 		body{
 			margin:0;
 			color:#6a6f8c;
-			background:#c8c8c8;
 			font:600 16px/18px 'Open Sans',sans-serif;
+
+			background-image: url('https://www.knaufdanoline.com/media/0jvbyuzy/rns-college-india_1080x1920.jpg?anchor=center&mode=crop&quality=90&width=1320&height=770&rnd=132700266454630000');
+            background-repeat: no-repeat;
+            background-size: cover;
+			background-color: rgba(255, 255, 255, 0.1);
 		}
 		*,:after,:before{box-sizing:border-box}
 		.clearfix:after,.clearfix:before{content:'';display:table}
@@ -175,14 +179,12 @@
 						<label for="user" class="label">Email</label>
 						<input id="user" type="email" class="input"  name="email">
 					</div>
+					<br>
 					<div class="group">
 						<label for="pass" class="label">Password</label>
 						<input id="pass" type="password" class="input" data-type="password"  name="password">
 					</div>
-					<div class="group">
-						<input id="check" type="checkbox" class="check" checked>
-						<label for="check"><span class="icon"></span> Keep me Signed in</label>
-					</div>
+					<br><br>
 					<div class="group">
 						<input type="submit" class="button" value="Sign In">
                         <!--<button type="submit" class="btn btn-primary btn-block">Sign In</button>-->
