--- a/student_management_app/templates/hod_template/add_staff_template.html
+++ b/student_management_app/templates/hod_template/add_staff_template.html
@@ -19,31 +19,31 @@ Add Staff
           <div class="card-body">
             <div class="form-group">
               <label>Email address</label>
-              <input type="email" class="form-control" name="email" placeholder="Enter email">
+              <input type="email" class="form-control" name="email" placeholder="Enter email" required>
             </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="password" class="form-control"  placeholder="Password" name="password">
+              <input type="password" class="form-control"  placeholder="Password" name="password" required>
             </div>
             <div class="form-group">
               <label>First Name</label>
-              <input type="text" class="form-control" placeholder="First Name" name="first_name">
+              <input type="text" class="form-control" placeholder="First Name" name="first_name" required>
             </div>
             <div class="form-group">
               <label>Last Name</label>
-              <input type="text" class="form-control" placeholder="Last Name" name="last_name">
+              <input type="text" class="form-control" placeholder="Last Name" name="last_name" required>
             </div>
             <div class="form-group">
               <label>Username</label>
-              <input type="text" class="form-control" placeholder="Username" name="username">
+              <input type="text" class="form-control" placeholder="Username" name="username" required>
             </div>
             <div class="form-group">
               <label>Address</label>
-              <input type="text" class="form-control" placeholder="Address" name="address">
+              <input type="text" class="form-control" placeholder="Address" name="address" required>
             </div>
             <div class="form-group">
               <label>Admin ID</label>
-              <input type="text" class="form-control" placeholder="Admin ID" name="admin_id">
+              <input type="text" class="form-control" placeholder="Admin ID" name="admin_id" required>
             </div>
             <div class="form-group">
               {% if messages %}
