--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -132,6 +132,15 @@
             </a>
           </li>
           <li class="nav-item">
+            {% url 'add_session' as add_session %}
+            <a href="/add_session" class="nav-link {% if request.path == add_session %} active {% endif %} ">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Add Session Year
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
             {% url 'manage_session' as manage_session %}
             <a href="/manage_session" class="nav-link {% if request.path == manage_session %} active {% endif %} ">
               <i class="nav-icon fas fa-th"></i>
