--- a/student_management_app/templates/student_template/student_profile.html
+++ b/student_management_app/templates/student_template/student_profile.html
@@ -22,8 +22,8 @@ Edit Profile
             <input type="text" class="form-control" name="username" value="{{ user.username }}" disabled="disabled">
           </div>
           <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control" name="username" value="{{ user.email }}" disabled="disabled">
+            <label>Email</label>
+            <input type="email" class="form-control" name="email" value="{{ user.email }}" disabled="disabled">
           </div>
            <div class="form-group">
             <label>First Name</label>
