corrections in edit staff

--- a/student_management_app/templates/hod_template/edit_staff_template.html
+++ b/student_management_app/templates/hod_template/edit_staff_template.html
@@ -14,7 +14,7 @@ Edit Staff | username : {{staff.admin.username}} | ID : {{staff.admin.id}}
           <h3 class="card-title">Edit Staff</h3>
         </div>
 
-        <form role="form" action= "{% url 'update_staff' staff_id=staff.id %}" method="post">
+        <form role="form" action="/edit_staff_save" method = "POST">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
