--- a/student_management_app/templates/hod_template/manage_student_template.html
+++ b/student_management_app/templates/hod_template/manage_student_template.html
@@ -26,7 +26,6 @@ Manage Student
                                     <th>Email</th>
                                     <th>Address</th>
                                     <th>Gender</th>
-                                    <th>Profile Pic</th>
                                     <th>Session Year</th>
                                     <!--<th>Start Year</th>
                                     <th>End Year</th>-->
@@ -46,11 +45,10 @@ Manage Student
                                     <td>{{student.admin.email}}</td>
                                     <td>{{student.address}}</td>
                                     <td>{{student.gender}}</td>
-                                    <td><img src = "{{ student.profile_pic }}" style = "width:100px"/></td>
-                                    <td>{{student.session_year_id}}</td>
+                                    <td>{{student.session_start_year}} {{student.session_end_year}}</td>
                                     <!--<td>{{student.session_start_year}}</td>
                                     <td>{{student.session_end_year}}</td>-->
-                                    <td>{{student.course_idk.course_name}}</td>
+                                    <td>{{student.course_id.course_name}}</td>
                                     <td>{{student.admin.last_login}}</td>
                                     <td>{{student.admin.date_joined}}</td>
                                     <th><a href = "/edit_student/{{student.admin.id}}"class="btn btn-success">Edit</a></th>
