--- a/student_management_app/templates/hod_template/edit_student_template.html
+++ b/student_management_app/templates/hod_template/edit_student_template.html
@@ -55,7 +55,7 @@ Edit Student | username : {{student.admin.username}} | ID : {{student.admin.id}}
           </div>
             <div class="form-group">
                 <label>Session Start</label>
-                <input type="date" class="form-control" placeholder="Session Start Year" name="session_start_year" value="{{student.session_start_year|date:"Y-m-d"}}">
+                <input type="date" class="form-control" placeholder="Session Start Year" name="session_start_year" value="{{student.session_start_year|date:'Y-m-d'}}">
             </div>
             <div class="form-group">
                 <label>Session End</label>
