modifications to add staff

--- a/student_management_app/templates/hod_template/add_staff_template.html
+++ b/student_management_app/templates/hod_template/add_staff_template.html
@@ -14,7 +14,7 @@ Add Staff
           <h3 class="card-title">Add Staff</h3>
         </div>
 
-        <form role="form" action="/add_staff_form_api" method="post">
+        <form role="form" action="/add_staff_form_save" method="post">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
