--- a/student_management_app/templates/hod_template/add_student_template.html
+++ b/student_management_app/templates/hod_template/add_student_template.html
@@ -15,7 +15,7 @@ Add Student
           <h3 class="card-title">Add Student</h3>
         </div>
 
-        <form role="form" action="/add_student_form_api" method="post">
+        <form role="form" action="/add_student_form_save" method="post">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
