--- a/student_management_app/templates/hod_template/edit_subject_template.html
+++ b/student_management_app/templates/hod_template/edit_subject_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 {% load static %}
 {% block page_title %}
-Edit Subject | Subject ID : {{course.id}}
+Edit Subject | Subject ID : {{subject.id}}
 {% endblock page_title %}
 {% block main_content %}
 <!-- Main content -->
