--- a/student_management_app/templates/hod_template/manage_session_template.html
+++ b/student_management_app/templates/hod_template/manage_session_template.html
@@ -25,12 +25,12 @@ Manage Session
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for session in sessionyearmodel %}
+                                {% for session_year in sessionyearmodel %}
                                 <tr>
-                                    <td>{{session.id }}</td>
-                                    <td>{{session.session_start_year}}</td>
-                                    <td>{{session.session_end_year}}</td>
-                                    <th><a href = "/edit_session/{{session.id}}"class="btn btn-success">Edit</a></th>
+                                    <td>{{session_year.id }}</td>
+                                    <td>{{session_year.session_start_year}}</td>
+                                    <td>{{session_year.session_end_year}}</td>
+                                    <th><a href = "/edit_session/{{session_year.id}}"class="btn btn-success">Edit</a></th>
                                 </tr>
                                 {% endfor %}
                                     
