--- a/student_management_app/templates/hod_template/add_subject_template.html
+++ b/student_management_app/templates/hod_template/add_subject_template.html
@@ -14,7 +14,7 @@ Add Subject
           <h3 class="card-title">Add Subject</h3>
         </div>
 
-        <form role="form" action="/add_subject_form_api" method="post">
+        <form role="form" action="/add_subject_form_save" method="post">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
