--- a/student_management_app/templates/staff_template/staff_apply_leave.html
+++ b/student_management_app/templates/staff_template/staff_apply_leave.html
@@ -15,7 +15,7 @@ Leave Report and Apply for Leave
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-               <form action=" #staff_apply_leave_save to be written here " method="post">
+               <form action="{% url 'staff_apply_leave_save' %}" method="POST">
                 <div class="card-body">
 
                    <div class="form-group">
