--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -158,7 +158,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/add_staff" class="nav-link">
+            <a href="/replyto_student_feedback" class="nav-link {% if request.path == replyto_student_feedback %} active {% endif %} ">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Student Feedback
@@ -166,7 +166,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/add_staff" class="nav-link">
+            <a href="/replyto_staff_feedback" class="nav-link {% if request.path == replyto_staff_feedback %} active {% endif %} ">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Staff Feedback
