added edit profile page

--- a/student_management_app/templates/hod_template/add_student_template.html
+++ b/student_management_app/templates/hod_template/add_student_template.html
@@ -72,31 +72,31 @@ Add Student
             </div>
             <div class="form-group">
               <label>Father Name</label>
-              <input type="text" class="form-control" placeholder="Father Name" name="first_name">
+              <input type="text" class="form-control" placeholder="Father Name" name="father_name">
             </div>
             <div class="form-group">
               <label>Father's Phone Number</label>
-              <input type="text" class="form-control" placeholder="Father's Phone Number" name="first_name">
+              <input type="text" class="form-control" placeholder="Father's Phone Number" name="father_num">
             </div>
             <div class="form-group">
               <label>Mother Name</label>
-              <input type="text" class="form-control" placeholder="Mother Name" name="first_name">
+              <input type="text" class="form-control" placeholder="Mother Name" name="mother_name">
             </div>
             <div class="form-group">
               <label>Mother's Phone Number</label>
-              <input type="text" class="form-control" placeholder="Mother's Phone Number" name="first_name">
+              <input type="text" class="form-control" placeholder="Mother's Phone Number" name="mother_num">
             </div>
             <div class="form-group">
               <label>Guardian Name</label>
-              <input type="text" class="form-control" placeholder="Guardian Name" name="first_name">
+              <input type="text" class="form-control" placeholder="Guardian Name" name="gaurdian_name">
             </div>
             <div class="form-group">
               <label>Guardian's Phone Number</label>
-              <input type="text" class="form-control" placeholder="Guardian's Phone Number" name="first_name">
+              <input type="text" class="form-control" placeholder="Guardian's Phone Number" name="gaurdian_num">
             </div>
             <div class="form-group">
               <label>Parent/Guardian Email</label>
-              <input type="text" class="form-control" placeholder="Email id" name="first_name">
+              <input type="text" class="form-control" placeholder="Email id" name="parent_or_gaurdian_email">
             </div>
             
           
