--- a/student_management_app/templates/student_template/student_edit_profile.html
+++ b/student_management_app/templates/student_template/student_edit_profile.html
@@ -39,31 +39,31 @@ Edit Profile
           </div>
           <div class="form-group">
             <label>Father Name</label>
-            <input type="text" class="form-control"  name="father_name" value="{{ user.father_name }}">
+            <input type="text" class="form-control"  name="father_name" value="{{ student.father_name }}">
           </div>
           <div class="form-group">
             <label>Father's Phone Number</label>
-            <input type="text" class="form-control"  name="father_num" value="{{ user.father_num }}">
+            <input type="text" class="form-control"  name="father_num" value="{{ student.father_num }}">
           </div>
           <div class="form-group">
             <label>Mother Name</label>
-            <input type="text" class="form-control"  name="mother_name" value="{{ user.mother_name }}">
+            <input type="text" class="form-control"  name="mother_name" value="{{ student.mother_name }}">
           </div>
           <div class="form-group">
             <label>Mother's Phone Number</label>
-            <input type="text" class="form-control"  name="mother_num" value="{{ user.mother_num }}">
+            <input type="text" class="form-control"  name="mother_num" value="{{ student.mother_num }}">
           </div>
           <div class="form-group">
             <label>Guardian Name</label>
-            <input type="text" class="form-control"  name="gaurdian_name" value="{{ user.gaurdian_name }}">
+            <input type="text" class="form-control"  name="gaurdian_name" value="{{ student.gaurdian_name }}">
           </div>
           <div class="form-group">
             <label>Guardian's Phone Number</label>
-            <input type="text" class="form-control"  name="gaurdian_num" value="{{ user.gaurdian_num }}">
+            <input type="text" class="form-control"  name="gaurdian_num" value="{{ student.gaurdian_num }}">
           </div>
           <div class="form-group">
             <label>Parent/Guardian Email</label>
-            <input type="text" class="form-control"  name="parent_or_gaurdian_email" value="{{ user.parent_or_gaurdian_email }}">
+            <input type="text" class="form-control"  name="parent_or_gaurdian_email" value="{{ student.parent_or_gaurdian_email }}">
           </div>
            <div class="form-group">
             <label>Change Password?</label>
