--- a/student_management_app/templates/hod_template/edit_student_template.html
+++ b/student_management_app/templates/hod_template/edit_student_template.html
@@ -65,6 +65,37 @@ Edit Student | username : {{student.admin.username}} | ID : {{student.admin.id}}
               <label>Admin ID</label>
               <input type="text" class="form-control" placeholder="Admin ID" name="admin_id">
           </div>
+          <div class="form-group">
+            <label>Father Name</label>
+            <input type="text" class="form-control" placeholder="Father Name" name="father_name" value="{{student.father_name}}">
+          </div>
+          <div class="form-group">
+            <label>Father's Phone Number</label>
+            <input type="text" class="form-control" placeholder="Father's Phone Number" name="father_num" value="{{student.father_num}}">
+          </div>
+          <div class="form-group">
+            <label>Mother Name</label>
+            <input type="text" class="form-control" placeholder="Mother Name" name="mother_name" value="{{student.mother_name}}">
+          </div>
+          <div class="form-group">
+            <label>Mother's Phone Number</label>
+            <input type="text" class="form-control" placeholder="Mother's Phone Number" name="mother_num" value="{{student.mother_num}}">
+          </div>
+          <div class="form-group">
+            <label>Guardian Name</label>
+            <input type="text" class="form-control" placeholder="Guardian Name" name="gaurdian_name" value="{{student.gaurdian_name}}">
+          </div>
+          <div class="form-group">
+            <label>Guardian's Phone Number</label>
+            <input type="text" class="form-control" placeholder="Guardian's Phone Number" name="gaurdian_num" value="{{student.gaurdian_num}}">
+          </div>
+          <div class="form-group">
+            <label>Parent/Guardian Email</label>
+            <input type="text" class="form-control" placeholder="Email id" name="parent_or_gaurdian_email" value="{{student.parent_or_gaurdian_email}}">
+          </div>
+        </div>
+          
+        
           
             
             <div class="form-group">
