--- a/student_management_app/templates/hod_template/hod_profile.html
+++ b/student_management_app/templates/hod_template/hod_profile.html
@@ -34,6 +34,10 @@ Profile
                     <label>Last Name</label>
                     <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}" disabled="disabled">
                   </div>
+                  <div class="form-group">
+                    <label>Gender</label>
+                    <input type="text" class="form-control" name="gender" value="{{ user.gender }}" disabled="disabled">
+                  </div>
                    <div class="form-group">
                       {% if messages %}
                         {% for message in messages %}
