--- a/student_management_app/templates/staff_template/staff_profile.html
+++ b/student_management_app/templates/staff_template/staff_profile.html
@@ -29,14 +29,18 @@ Profile
                    <div class="form-group">
                     <label>First Name</label>
                     <input type="text" class="form-control" name="first_name" value="{{ user.first_name }}" disabled="disabled">
-                  </div>
+                  </div> 
                   <div class="form-group">
                     <label>Last Name</label>
                     <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}" disabled="disabled">
                   </div>
                    <div class="form-group">
                     <label>Address</label>
-                    <input type="text" class="form-control" name="address" value="{{ staff.address }}" disabled="disabled">
+                    <input type="text" class="form-control" name="address" value="{{ Staff.address }}" disabled="disabled">
+                  </div>
+                  <div class="form-group">
+                    <label>Department</label>
+                    <input type="text" class="form-control" name="department" value="{{ Staff.department }}" disabled="disabled">
                   </div>
                    <div class="form-group">
                       {% if messages %}
