--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -66,10 +66,26 @@
             </ul>
           </li>-->
           <li class="nav-item">
-            <a href="/edit_profile" class="nav-link">
+            <a href="/edit_hod_profile_form" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Edit Profile
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/add_admin" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Add Admin
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/manage_admin" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Manage Admin
               </p>
             </a>
           </li>
