--- a/student_management_app/templates/hod_template/add_admin_template.html
+++ b/student_management_app/templates/hod_template/add_admin_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 {% load static %}
 {% block page_title %}
-Edit Staff | username : {{staff.admin.username}} | ID : {{staff.admin.id}}
+Add Admin
 {% endblock page_title %}
 {% block main_content %}
 <!-- Main content -->
@@ -11,47 +11,45 @@ Edit Staff | username : {{staff.admin.username}} | ID : {{staff.admin.id}}
         <div class="col-md-12">
       <div class="card card-primary">
         <div class="card-header">
-          <h3 class="card-title">Edit Staff</h3>
+          <h3 class="card-title">Add Admin</h3>
         </div>
 
-        <form role="form" action="/edit_staff_save" method = "POST">
+        <form role="form" action="/add_admin_form_save" method="post">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
               <label>Email address</label>
-              <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{staff.admin.email}}">
+              <input type="email" class="form-control" name="email" placeholder="Enter email" required>
+            </div>
+            <div class="form-group">
+              <label>Password</label>
+              <input type="password" class="form-control"  placeholder="Password" name="password" required>
             </div>
             <div class="form-group">
               <label>First Name</label>
-              <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{staff.admin.first_name}}">
+              <input type="text" class="form-control" placeholder="First Name" name="first_name" required>
             </div>
             <div class="form-group">
               <label>Last Name</label>
-              <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{staff.admin.last_name}}">
-              <input type="hidden"  name="staff_id" value="{{staff.admin.id}}">
+              <input type="text" class="form-control" placeholder="Last Name" name="last_name" required>
             </div>
             <div class="form-group">
               <label>Username</label>
-              <input type="text" class="form-control" placeholder="Username" name="username" value="{{staff.admin.username}}">
+              <input type="text" class="form-control" placeholder="Username" name="username" required>
             </div>
             <div class="form-group">
               <label>Gender</label>
-              <select class="form-control" name="gender" value="{{staff.admin.gender}}">
+              <select class="form-control" name="gender">
                       <option>F</option>
                       <option>M</option>
               </select>
           </div>
-          <div class="form-group">
-            <label>Department</label>
-            <input type="text" class="form-control" placeholder="Department" name="department" value="{{staff.department}}">
-          </div>
-          <div class="form-group">
             <div class="form-group">
               <label>Address</label>
-              <input type="text" class="form-control" placeholder="Address" name="address" value="{{staff.address}}">
+              <input type="text" class="form-control" placeholder="Address" name="address" required>
             </div>
+            
             <div class="form-group">
-
               {% if messages %}
               <!-- /.col -->
               <div class="col-12">
@@ -70,9 +68,10 @@ Edit Staff | username : {{staff.admin.username}} | ID : {{staff.admin.id}}
           </div>
 
           <div class="card-footer">
-            <button type="submit" class="btn btn-primary btn-block">Save</button>
+            <button type="submit" class="btn btn-primary btn-block">Add Admin</button>
           </div>
         </form>
+
       </div>
         </div>
       </div>
