--- a/student_management_app/templates/hod_template/edit_admin_template.html
+++ b/student_management_app/templates/hod_template/edit_admin_template.html
@@ -1,7 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
 {% load static %}
 {% block page_title %}
-Edit Staff | username : {{staff.admin.username}} | ID : {{staff.admin.id}}
+Edit Admin | username : {{admin.admin.username}} | ID : {{admin.id}}
 {% endblock page_title %}
 {% block main_content %}
 <!-- Main content -->
@@ -11,47 +11,41 @@ Edit Staff | username : {{staff.admin.username}} | ID : {{staff.admin.id}}
         <div class="col-md-12">
       <div class="card card-primary">
         <div class="card-header">
-          <h3 class="card-title">Edit Staff</h3>
+          <h3 class="card-title">Edit Admin</h3>
         </div>
 
-        <form role="form" action="/edit_staff_save" method = "POST">
+        <form role="form" action="/edit_admin_save" method = "POST">
           {% csrf_token %}
           <div class="card-body">
             <div class="form-group">
               <label>Email address</label>
-              <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{staff.admin.email}}">
+              <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{admin.admin.email}}">
             </div>
             <div class="form-group">
               <label>First Name</label>
-              <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{staff.admin.first_name}}">
+              <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{admin.admin.first_name}}">
             </div>
             <div class="form-group">
               <label>Last Name</label>
-              <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{staff.admin.last_name}}">
+              <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{admin.admin.last_name}}">
               <input type="hidden"  name="staff_id" value="{{staff.admin.id}}">
             </div>
             <div class="form-group">
               <label>Username</label>
-              <input type="text" class="form-control" placeholder="Username" name="username" value="{{staff.admin.username}}">
+              <input type="text" class="form-control" placeholder="Username" name="username" value="{{admin.admin.username}}">
             </div>
             <div class="form-group">
-              <label>Gender</label>
-              <select class="form-control" name="gender" value="{{staff.admin.gender}}">
-                      <option>F</option>
-                      <option>M</option>
-              </select>
-          </div>
-          <div class="form-group">
-            <label>Department</label>
-            <input type="text" class="form-control" placeholder="Department" name="department" value="{{staff.department}}">
-          </div>
-          <div class="form-group">
+                <label>Gender</label>
+                <select class="form-control" name="gender" value="{{admin.gender}}">
+                        <option>F</option>
+                        <option>M</option>
+                </select>
+            </div>
             <div class="form-group">
               <label>Address</label>
-              <input type="text" class="form-control" placeholder="Address" name="address" value="{{staff.address}}">
+              <input type="text" class="form-control" placeholder="Address" name="address" value="{{admin.address}}">
             </div>
             <div class="form-group">
-
               {% if messages %}
               <!-- /.col -->
               <div class="col-12">
