--- a/student_management_app/templates/hod_template/hod_edit_profile.html
+++ b/student_management_app/templates/hod_template/hod_edit_profile.html
@@ -15,7 +15,7 @@ Edit Profile
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" action="{% url 'hod_profile_save' %}" method="post">
+              <form role="form" action="{% url 'edit_admin_form' %}" method="post">
                   {% csrf_token %}
                 <div class="card-body">
                   <div class="form-group">
