--- a/student_management_app/templates/hod_template/edit_staff_template.html
+++ b/student_management_app/templates/hod_template/edit_staff_template.html
@@ -43,8 +43,12 @@ Edit Staff | username : {{staff.admin.username}} | ID : {{staff.admin.id}}
           </div>
           <div class="form-group">
             <label>Department</label>
-            <input type="text" class="form-control" placeholder="Department" name="department" value="{{staff.department}}">
-          </div>
+            <select class="form-control" name="department_id">
+                {% for course in courses %}
+                    <option value="{{course.id}}">{{course.course_name}}</option>
+                {%endfor%}
+            </select> 
+        </div>
           <div class="form-group">
             <div class="form-group">
               <label>Address</label>
