--- a/student_management_app/templates/staff_template/staff_profile.html
+++ b/student_management_app/templates/staff_template/staff_profile.html
@@ -40,7 +40,7 @@ Profile
                   </div>
                   <div class="form-group">
                     <label>Department</label>
-                    <input type="text" class="form-control" name="department" value="{{ Staff.department }}" disabled="disabled">
+                    <input type="text" class="form-control" name="department_id" value="{{ staff.department_id }}" disabled="disabled">
                   </div>
                    <div class="form-group">
                       {% if messages %}
