--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -65,6 +65,15 @@
               </li>
             </ul>
           </li>-->
+          
+          <li class="nav-item">
+            <a href="/hod_profile" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Home
+              </p>
+            </a>
+          </li>
           <li class="nav-item">
             <a href="/edit_hod_profile_form" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
