--- a/student_management_app/templates/staff_template/staff_profile.html
+++ b/student_management_app/templates/staff_template/staff_profile.html
@@ -36,7 +36,7 @@ Profile
                   </div>
                    <div class="form-group">
                     <label>Address</label>
-                    <input type="text" class="form-control" name="address" value="{{ Staff.address }}" disabled="disabled">
+                    <input type="text" class="form-control" name="address" value="{{ staff.address }}" disabled="disabled">
                   </div>
                   <div class="form-group">
                     <label>Department</label>
