page restrictions for staff,student

--- a/student_management_app/templates/student_template/student_edit_profile.html
+++ b/student_management_app/templates/student_template/student_edit_profile.html
@@ -33,6 +33,10 @@ Edit Profile
             <label>Last Name</label>
             <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}">
           </div>
+          <div class="form-group">
+            <label>Gender</label>
+            <input type="text" class="form-control" name="gender" value="{{ student.gender }}">
+          </div>
            <div class="form-group">
             <label>Address</label>
             <input type="text" class="form-control" name="address" value="{{ student.address }}">
