--- a/student_management_app/templates/student_template/student_profile.html
+++ b/student_management_app/templates/student_template/student_profile.html
@@ -33,6 +33,10 @@ Profile
             <label>Last Name</label>
             <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}" disabled="disabled">
           </div>
+          <div class="form-group">
+            <label>Gender</label>
+            <input type="text" class="form-control" name="gender" value="{{ student.gender }}" disabled="disabled">
+          </div>
            <div class="form-group">
             <label>Address</label>
             <input type="text" class="form-control" name="address" value="{{ student.address }}" disabled="disabled">
